
Revision history for {{$dist->name}}

{{$NEXT}}

0.003     2019-07-01 16:28:24+08:00 Asia/Kuala_Lumpur
    New features:

    - fixes for encoding and switch to await syntax

0.002     2019-02-27 14:47:06+08:00 Asia/Kuala_Lumpur
    New features:

    - support for stopping the worker (thanks to Paul Evans, https://github.com/team-at-cpan/Job-Async-Redis/pull/2)
    - support for prefix on queues

    Also updated to use Job::Async 0.003 features.

0.001     2017-12-29 20:57:07+08:00 Asia/Kuala_Lumpur
    Initial release.
