@@ -2,6 +2,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - timing metrics are recorded in Redis
+    - basic monitoring script
 
 0.003     2019-07-01 16:28:24+08:00 Asia/Kuala_Lumpur
     New features:
